--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-600.9KB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-11.91MB/s(Youtube:不良林), server: shkr2.vip.www.klrxyru.cn, port: 1552, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: 8d83584393.wns.windows.com}
-  - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇳🇱 荷兰-1.07MB/s(Youtube:不良林), server: 37.120.192.158, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林), server: 213.183.53.214, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
-  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇷🇺 俄罗斯联邦-695.1KB/s(Youtube:不良林), server: 213.183.53.182, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 38.75.136.102, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-989.6KB/s(Youtube:不良林), server: 38.121.43.71, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-868.1KB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
   - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-717.9KB/s(Youtube:不良林), server: 38.75.136.102, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
   - {name: 🇦🇺 澳大利亚-820.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林), server: 213.183.53.200, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-600.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-695.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-989.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-868.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-717.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-820.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-600.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-695.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-989.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-868.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-717.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-820.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-600.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-695.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-989.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-868.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-717.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-820.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-600.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-695.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-989.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-868.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-717.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-820.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-600.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-695.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-989.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-868.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-717.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-820.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-600.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-695.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-989.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-868.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-717.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-820.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-600.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-695.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-989.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-868.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-717.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-820.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
