--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-1.07MB/s(Youtube:不良林), server: 37.120.192.158, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇷🇺 俄罗斯联邦-695.1KB/s(Youtube:不良林), server: 213.183.53.182, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 38.75.136.102, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-989.6KB/s(Youtube:不良林), server: 38.121.43.71, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇳 中国-868.1KB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇨🇳 中国-11.91MB/s(Youtube:不良林), server: shkr2.vip.www.klrxyru.cn, port: 1552, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: 8d83584393.wns.windows.com}
+  - {name: 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林), server: 213.183.53.177, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇯🇵 日本-1.58MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇷🇺 俄罗斯联邦-592.5KB/s(Youtube:不良林), server: 213.183.53.200, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
+  - {name: 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林), server: 213.183.53.177, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
   - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-717.9KB/s(Youtube:不良林), server: 38.75.136.102, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-695.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-989.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-868.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-592.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-717.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-1.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-695.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-989.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-868.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-592.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-717.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-695.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-989.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-868.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-592.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-717.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-1.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-695.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-989.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-868.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-592.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-717.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-695.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-989.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-868.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-592.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-717.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-695.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-989.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-868.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-592.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-717.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-695.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-989.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-868.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-592.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-717.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林)
